Speedup of LSP Quickfix provider by caching and applying edits on-demand
Signed-off-by: Heinrich Weichert <heinrich.weichert@avl.com>